<resources>
    <string name="app_name">REAL_RIDER</string>
    <string name="start">START</string>
    <string name="ready">READY</string>

    <!-- title -->
    <string name="title_TIME_ATTACK">TIME ATTACK</string>
    <string name="title_RACE_IN_PROGRESS">RACE IN PROGRESS</string>

    <string name="PLAYER1">1 PLAYER</string>
    <string name="PLAYER2">2 PLAYER</string>
    <string name="PLAYER3">3 PLAYER</string>
    <string name="PLAYER4">4 PLAYER</string>

    <string name="NEXT">NEXT</string>
    <string name="REAL_RIDER">REAL RIDER</string>
    <string name="CLASSIC">CLASSIC</string>
    <string name="ARCADE">ARCADE</string>
    <string name="TIME_ATTACK">TIME\nATTACK</string>


</resources>