<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.IntroFragment">

        <com.inandout.real_rider.comm.CommTitleBar
            android:id="@+id/comm_title_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="GAME MODE"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:id="@+id/background_gray"
            android:layout_width="match_parent"
            android:layout_height="190dp"

            android:background="@color/color_0E0E0E_10"

            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comm_title_bar_main"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_classic"
            android:layout_width="212dp"
            android:layout_height="270dp"


            android:background="@drawable/shape_user_ready"
            app:layout_constraintHorizontal_chainStyle="spread"

            app:layout_constraintTop_toTopOf="@id/background_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/background_gray"
            app:layout_constraintEnd_toStartOf="@id/cl_arcade"
            >

            <TextView
                android:id="@+id/tv_classic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/CLASSIC"
                android:layout_marginBottom="14dp"
                android:textSize="25dp"
                android:fontFamily="@font/orbitron_bold"
                android:letterSpacing="0.1"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_arcade"
            android:layout_width="212dp"
            android:layout_height="270dp"


            android:background="@drawable/shape_user_ready"
            app:layout_constraintHorizontal_chainStyle="packed"

            app:layout_constraintTop_toTopOf="@id/background_gray"
            app:layout_constraintStart_toEndOf="@id/cl_classic"
            app:layout_constraintBottom_toBottomOf="@id/background_gray"
            app:layout_constraintEnd_toStartOf="@id/cl_time_attack"
            >

            <TextView
                android:id="@+id/tv_user_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/ARCADE"
                android:layout_marginBottom="14dp"
                android:textSize="25dp"
                android:fontFamily="@font/orbitron_bold"
                android:letterSpacing="0.1"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_time_attack"
            android:layout_width="212dp"
            android:layout_height="270dp"


            android:background="@drawable/shape_user_ready"
            app:layout_constraintHorizontal_chainStyle="packed"

            app:layout_constraintTop_toTopOf="@id/background_gray"
            app:layout_constraintStart_toEndOf="@id/cl_arcade"
            app:layout_constraintBottom_toBottomOf="@id/background_gray"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/tv_time_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/TIME_ATTACK"
                android:layout_marginBottom="14dp"
                android:textSize="25dp"
                android:fontFamily="@font/orbitron_bold"
                android:letterSpacing="0.1"
                android:textAlignment="center"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>