<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.IntroFragment">

        <com.inandout.real_rider.comm.CommTitleBar
            android:id="@+id/comm_title_bar_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="SINGLE"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <View
            android:id="@+id/background_gray"
            android:layout_width="match_parent"
            android:layout_height="190dp"

            android:background="@color/color_0E0E0E_10"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_player1"
            android:layout_width="173dp"
            android:layout_height="247dp"

            android:layout_marginEnd="20dp"

            android:background="@drawable/shape_user_ready"
            app:layout_constraintHorizontal_chainStyle="packed"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cl_player2"
            app:layout_constraintHorizontal_bias="0.5"> <!-- 가운데 정렬을 위해 Horizontal Bias 추가 -->
            >

            <TextView
                android:id="@+id/tv_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:text="@string/PLAYER1"
                android:textSize="17dp"
                android:fontFamily="@font/orbitron_bold"
                android:letterSpacing="0.1"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <ImageView
                android:id="@+id/player1_image"
                android:layout_width="129dp"
                android:layout_height="148dp"
                android:src="@drawable/shinjjang"
                app:layout_constraintBottom_toTopOf="@id/tv_user_name1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_player1"
                app:layout_constraintVertical_bias="0.562" />

            <TextView
                android:id="@+id/tv_user_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="14dp"
                android:textSize="17dp"
                android:fontFamily="@font/orbitron_bold"
                android:letterSpacing="0.1"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:text="짱구"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_player2"
            android:layout_width="173dp"
            android:layout_height="247dp"

            android:background="@drawable/shape_user_ready"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cl_player1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >

            <TextView
                android:id="@+id/tv_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:fontFamily="@font/orbitron_bold"
                android:letterSpacing="0.1"
                android:text="@string/PLAYER2"
                android:textSize="17dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/player2_image"
                android:layout_width="129dp"
                android:layout_height="148dp"
                android:src="@drawable/chulsu"
                app:layout_constraintBottom_toTopOf="@id/tv_user_name2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_player2" />

            <TextView
                android:id="@+id/tv_user_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="14dp"
                android:fontFamily="@font/orbitron_bold"
                android:letterSpacing="0.1"
                android:textSize="17dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:text="짱구"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_ready_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/orbitron_bold"
            android:includeFontPadding="false"
            android:background="@drawable/shape_start_button"

            android:letterSpacing="0.1"
            android:paddingStart="21dp"
            android:paddingTop="12dp"
            android:paddingEnd="21dp"
            android:paddingBottom="12dp"
            android:text="@string/start"

            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>